--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,15 +1,40 @@
-/*! tailwindcss v2.0.4 | MIT License | https://tailwindcss.com */
+.bg-gradient {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    180deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 32%,
+    rgba(17, 198, 235, 1) 100%
+  );
+}
 
-/*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+.border-login {
+  border-right: 1.5px solid #3b84eb;
+}
+.right-3 {
+  right: 0.75rem;
+}
 
-/*
-Document
-========
-*/
+.w-60 {
+  width: 15rem;
+}
 
-/**
-Use a better box model (opinionated).
-*/
+.fill-white {
+  fill: white;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
+.inset-y-0 {
+  top: 0;
+  bottom: 0;
+}
 
 *,
 *::before,
@@ -3284,6 +3309,26 @@ select {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
+.pl-14 {
+  padding-left: 3.5rem;
+}
+.pr-14 {
+  padding-right: 3.5rem;
+}
+.pt-14 {
+  padding-top: 3.5rem;
+}
+.pb-14 {
+  padding-bottom: 3.5rem;
+}
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+.py-14 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
 
 .pl-16 {
   padding-left: 4rem;
@@ -4053,6 +4098,10 @@ select {
 
 .break-all {
   word-break: break-all;
+}
+
+.w-login {
+  width: 300px;
 }
 
 .w-1 {
